<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        app:elevation="0dp">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_900"
            app:contentScrim="@color/black_900"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="60dp"
                android:text="@string/app_name"
                android:textColor="@color/orange_500"
                android:textSize="28sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/greetings_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subjects_layout"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="bottom"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/itim"
                android:text="@string/greetings"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                android:layout_width="35dp"
                android:layout_height="42dp"
                android:layout_below="@id/subjects_layout"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="@color/red_300"
                app:cornerRadius="28dp"
                app:icon="@drawable/logut_symbol"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconSize="18dp"
                app:iconTint="@color/red_500"
                app:rippleColor="@color/red_100"
                app:strokeWidth="0dp" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:overScrollMode="never"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/posts_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:overScrollMode="never"
                android:paddingTop="30dp"
                android:paddingBottom="60dp">


            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:background="@color/transparent">


        <androidx.cardview.widget.CardView
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:backgroundTint="@color/black_500">


                <TextView
                    android:id="@+id/new_messages_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/itim"
                    android:backgroundTint="@color/black_500"
                    android:text="@string/slogan" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/subjects_layout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/app_bar"
            android:backgroundTint="@color/transparent"
            android:background="@color/transparent"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/backdrop"
                android:scaleType="fitXY"
                android:rotation="180"
                android:layout_gravity="bottom"
                android:contentDescription="@string/fadinBar_description"
                android:backgroundTint="@color/transparent" />


            <TextView
                android:layout_marginStart="25dp"
                android:id="@+id/subject_1_view"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.8"
                android:background="@drawable/rounded_rect"
                android:fontFamily="@font/itim"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/category_1"
                android:textColor="@color/orange_900"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@id/subject_2_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/subject_2_view"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.8"
                android:fontFamily="@font/itim"
                android:paddingStart="15dp"
                android:paddingTop="5dp"
                android:paddingEnd="15dp"
                android:paddingBottom="5dp"
                android:text="@string/category_2"
                android:textColor="@color/orange_900"
                android:gravity="center"
                android:layout_marginStart="15dp"
                app:layout_constraintStart_toEndOf="@id/subject_1_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/backdrop"
        android:scaleType="fitXY"
        android:layout_gravity="bottom"
        android:contentDescription="@string/fadinBar_description"
        android:backgroundTint="@color/transparent"/>



</androidx.coordinatorlayout.widget.CoordinatorLayout>